# Ordo

./: CMakeLists.txt  Makefile  bitarray.c  cegt.c  csv.c  encount.c  groups.c  indiv.c  inidone.c  main.c  myhelp.c  namehash.c  pgnget.c  plyrs.c  rating.c  ratingb.c  relpman.c  relprior.c  report.c  rtngcalc.c  sim.c  strlist.c  summations.c  xpect.c  xpect.h
myopt/: myopt.c
